# bdk_chain_flutter

./: .gitignore  Cargo.toml  Makefile  README.md  analysis_options.yaml  build.rs  pubspec.yaml
android/: local.properties
ios/Classes/: bindings.h
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: bdk_chain.dart  bindings.dart  bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart
linux/flutter/ephemeral/: generated_config.cmake
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
macos/Runner/: bridge_generated.h
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  coordinator.rs  counter.rs  lib.rs
scripts/: gen_flutter.sh
src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
test/: bdk_chain_test.dart
