# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bdk_chain_flutter"
version = "0.1.0"
edition = "2021"

[lib]
name = "bdk_chain_flutter"
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
flutter_rust_bridge_codegen = { version = "1.76.0"  }

[dependencies]
flutter_rust_bridge = { version = "1.76.0" }
