[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
bdk_chain = { git = "https://github.com/evanlinjin/bdk.git", rev = "29cbd835a962de677ec5e75f364c2265a7ba26aa" }
